Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34550

QDBusObjectPath property is sometimes ignored by qdbuscpp2xml

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.7.0 FF
    • 5.2.0 Beta1 , 6.6.0
    • D-Bus
    • None
    • Tried with Qt 5.2 beta1 (built with mingw64) on windows only so far.
    • 86cfafcb5 (dev)
    • Foundations Sprint 96

    Description

      There is a strange parser bug in qdbuscpp2xml.

      Classes, which have Q_PROPERTY's returning a QDBusObjectPath, this properties are all ignored until there is a non-QDBusObjectPath property.

      Example:
      This one works, all three properties are recognized and written to the xml file:

      Q_PROPERTY(QString stringproperty READ stringproperty)
      Q_PROPERTY(QDBusObjectPath objectProperty READ objectProperty)
      Q_PROPERTY(QList<QDBusObjectPath> objectpropertyList READ objectpropertyList)
      

      only the last two properties are recognized:

      Q_PROPERTY(QDBusObjectPath objectProperty READ objectProperty)
      Q_PROPERTY(QString stringproperty READ stringproperty)
      Q_PROPERTY(QList<QDBusObjectPath> objectpropertyList READ objectpropertyList)
      

      Nothing is recognized, the xml file does not contain any property:

      Q_PROPERTY(QDBusObjectPath objectProperty READ objectProperty)
      Q_PROPERTY(QList<QDBusObjectPath> objectpropertyList READ objectpropertyList)
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            rolandwinklmeier Roland Winklmeier
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes